[project]
name = "omni-qwen"
version = "0.1.0"
description = "Process VoiceAssistant-400K dataset with Kyutai TTS to generate Mimi tokens"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.0.0",
    "pyarrow>=14.0.0",
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
    "huggingface-hub>=0.24.7",
    # Kyutai TTS dependencies
    "torch>=2.0.0",
    "numpy>=2.1.0,<3.0",
    "safetensors<0.6",
    "sphn<0.2",
    "moshi==0.2.11",
]

[tool.uv]
package = false

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
